[package]
name = "futures"
version = "0.1.0"
authors = ["rodolfo.moi <rodolfo.moi@b2wdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10"
futures = "0.3"
