[package]
name = "futures"
version = "0.1.0"
authors = ["rodolfo.moi <rodolfo.moi@b2wdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
