[package]
name = "futures"
version = "0.1.0"
authors = ["rodolfo.moi <rodolfo.moi@b2wdigital.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.18", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
